--- a/Prj02_DWeather/app/build.gradle
+++ b/Prj02_DWeather/app/build.gradle
@@ -4,9 +4,11 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
+
+
     defaultConfig {
         applicationId "com.dstudio.wd.dweather"
-        minSdkVersion 14
+        minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -32,7 +34,9 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile files('libs/locSDK_6.23.jar')
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
-    compile files('libs/locSDK_6.23.jar')
+    compile 'com.jakewharton:disklrucache:2.0.2'
+    compile 'com.android.support:support-v4:23.2.0'
 }
