--- a/Prj01_ONE/app/build.gradle
+++ b/Prj01_ONE/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.dstudio.wd824.one"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 4
-        versionName "1.0.0"
+        versionCode 5
+        versionName "1.1.0"
     }
     buildTypes {
         release {
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.0'
     compile 'com.jakewharton:disklrucache:2.0.2'
     compile project(':onekeyshare')
+    compile 'com.android.support:palette-v7:23.2.0'
 }
