--- a/Prj01_ONE/app/build.gradle
+++ b/Prj01_ONE/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.dstudio.wd824.one"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 5
-        versionName "1.1.0"
+        versionCode 6
+        versionName "1.2.0"
     }
     buildTypes {
         release {
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.0'
     compile 'com.jakewharton:disklrucache:2.0.2'
     compile project(':onekeyshare')
-    compile 'com.android.support:palette-v7:23.2.0'
+    compile 'com.android.support:cardview-v7:23.2.0'
+    compile 'com.android.support:recyclerview-v7:23.2.0'
 }
