新增 过往-照片墙图片压缩功能

--- a/Prj03_One2.0/app/src/main/AndroidManifest.xml
+++ b/Prj03_One2.0/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
         </activity>
         <activity
             android:name=".MonthActivity"
-            android:label="@string/title_activity_month"
+            android:label=""
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity android:name=".HpActivity"
