--- a/Prj03_One2.0/app/build.gradle
+++ b/Prj03_One2.0/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.dstudio.wd.one"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 1
-        versionName "2.0.0"
+        versionCode 2
+        versionName "2.0.1"
     }
     buildTypes {
         release {
@@ -41,4 +41,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.2.0'
     compile 'com.android.support:palette-v7:23.2.0'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.umeng.analytics:analytics:latest.integration'
 }
