--- a/Prj03_One2.0/app/src/main/AndroidManifest.xml
+++ b/Prj03_One2.0/app/src/main/AndroidManifest.xml
@@ -89,13 +89,22 @@
             android:label="@string/title_activity_setting"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".activity.AboutActivity"
+        <activity
+            android:name=".activity.AboutActivity"
             android:label="关于"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
-        <meta-data android:value="57cfbdc0e0f55ae65d00064f" android:name="UMENG_APPKEY"></meta-data>
-        <meta-data android:value="Wandoujia" android:name="UMENG_CHANNEL"/>
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="57cfbdc0e0f55ae65d00064f"/>
+        <meta-data
+            android:name="UMENG_CHANNEL"
+            android:value="Xiaomi"/>
+
+        <activity android:name=".activity.ImgActivity"
+                  android:theme="@android:style/Theme.Translucent">
+        </activity>
     </application>
 
 </manifest>
