--- a/Prj02_DWeather/app/src/main/AndroidManifest.xml
+++ b/Prj02_DWeather/app/src/main/AndroidManifest.xml
@@ -46,6 +46,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <meta-data android:value="57dcafd667e58e9218004124" android:name="UMENG_APPKEY"></meta-data>
+        <meta-data android:value="Wandoujia" android:name="UMENG_CHANNEL"/>
     </application>
 
 </manifest>
