--- a/Prj02_DWeather/app/build.gradle
+++ b/Prj02_DWeather/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.dstudio.wd.dweather"
         minSdkVersion 19
         targetSdkVersion 23
-        versionCode 3
-        versionName "1.0.0"
+        versionCode 4
+        versionName "1.0.1"
     }
     buildTypes {
         release {
@@ -41,4 +41,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.0'
     compile 'com.android.support:cardview-v7:23.2.0'
     compile 'com.android.support:palette-v7:23.2.0'
+    compile 'com.umeng.analytics:analytics:latest.integration'
 }
