--- a/Prj03_One2.0/app/src/main/AndroidManifest.xml
+++ b/Prj03_One2.0/app/src/main/AndroidManifest.xml
@@ -100,11 +100,7 @@
             android:value="57cfbdc0e0f55ae65d00064f"/>
         <meta-data
             android:name="UMENG_CHANNEL"
-            android:value="Xiaomi"/>
-
-        <activity android:name=".activity.ImgActivity"
-                  android:theme="@android:style/Theme.Translucent">
-        </activity>
+            android:value="Wandoujia"/>
     </application>
 
 </manifest>
